# USETextbookChatbot

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
eval/: prompts.jsonl
src/: chat.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  ollama.rs  qdrant_store.rs  retrieval.rs  server.rs  tantivy_store.rs
src/ingest/: docx.rs  mod.rs  pdf.rs
static/: style.css
templates/: index.html
