[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
askama = "0.12.1"
axum = { version = "0.7.9", features = ["json"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tantivy = "0.22.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs", "process", "sync", "time"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
pdf-extract = "0.7.9"
